Interop Fix + assorted name & type changes (#435)
This branch fixes an interop bug in authenticatedUser and assumedRole.
TypeScript and Go use empty string for absent values. Java uses null and
disallows empty string. This PR normalizes empty authenticatedUser and
assumedRole strings to be null values for interop purposes.

This PR also applies a set of naming convention fixes and stronger
typing to the workflow status and aggregates API, replacing
stringly-typed and unit-suffixed fields with proper Java types. Note,
none of these breaking naming or type changes were on public API methods
or structs.

Naming fixes (remove "ms" suffix / fix naming convention)
- selectMaxQueueWaitMs → selectMaxQueueWait and selectMaxTotalLatencyMs
→ selectMaxTotalLatency in GetWorkflowAggregatesInput
  - selectMaxDurationMs → selectMaxDuration in GetStepAggregatesInput
- Duration fields now use Java Duration/Instant types internally;
callers don't need the Ms hint

  Stronger typing (use strongly typed state fields / strong types)
- GetWorkflowAggregatesInput.status changed from List<String> to
List<WorkflowState>
- GetStepAggregatesInput.status changed from List<String> to
List<GetStepAggregatesInput.Status> (new nested enum with SUCCESS/ERROR)
- ListWorkflowsInput.withStatus() now accepts varargs instead of a
single value
- WorkflowInitResult.deadlineEpochMS changed from Long to Instant
deadline

  WorkflowStatus correctness
- equals/hashCode were missing completedAt and serialization fields;
both now included